--- a/index.html
+++ b/index.html
@@ -18,9 +18,31 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+
+            <!-- header area-->
         <header class="container-fluid text-center text-white bg-dark p-2">
             <h1>Weather Dashboard</h1>
         </header>
+
+            <!-- Bootstrap for containers -->
+        <div class="container-fluid">
+            <div class="row">
+                <aside class="col-lg-3 bg-light">
+                    <h3 class="mt-1">search for a city:</h3>
+                    <div class="form-inline form-group">
+                        <input class="form-input" type="text" id="search-city" />
+                        <button class="btn btn-main" id="search-btn"> <i class="fa fa-search"></i></button>
+                    </div>
+
+                    <ul class="list-city history"></ul>
+                </aside>
+
+                <div class="col-lg-9">
+                    <div id="today"  class="mt-3"></div>
+                    <div id="weather" class="row mt-3"></div>
+                </div>
+            </div>
+        </div>
 
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
