--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="Assets/css/style.css">
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -24,25 +26,17 @@
             <h1>Weather Dashboard</h1>
         </header>
 
-            <!-- Bootstrap for containers -->
-        <div class="container-fluid">
-            <div class="row">
-                <aside class="col-lg-3 bg-light">
-                    <h3 class="mt-1">search for a city:</h3>
-                    <div class="form-inline form-group">
-                        <input class="form-input" type="text" id="search-city" />
-                        <button class="btn btn-main" id="search-btn"> <i class="fa fa-search"></i></button>
-                    </div>
+        <!-- input and search button to test fetch on javascript-->
+<div class="input">
+    <input type="text" class="inputValue" placeholder="Search a City">
+    <input type="submit" value="Submit" class="button">
+</div>
 
-                    <ul class="list-city history"></ul>
-                </aside>
-
-                <div class="col-lg-9">
-                    <div id="today"  class="mt-3"></div>
-                    <div id="weather" class="row mt-3"></div>
-                </div>
-            </div>
-        </div>
+<div class="display">
+    <h1 class="name"></h1>
+    <p class="description"></p>
+    <p class="temperature"></p>
+</div>
 
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
