have valid fetch for now, no bootstrap or 5 day yet

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <h1 class="name"></h1>
     <p class="description"></p>
     <p class="temperature"></p>
+    <p class="UVindex"></p>
+    <p class="humidity"></p>
+    <p class="windspeed"></p>
+    <p class="weathericon"></p>
 </div>
 
 
