--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
             <div id="past-searches"></div>
             
         </aside>
+
+        <!--HTML for main weather section, 9 colums in bootstrap 3 used in search-->
+        <main class="col-md-9">
+
+            <row class="border" id="cur-weather">
+
+                <h3 id="city"></h3>
+                <p id="temp"></p>
+                <p id="humid"></p>
+                <p id="windspeed"></p>
+                <p id="feels"></p>
+                <p id="uv"></p>
+            </row>
+            
+        </main>
     </div>
 </div>
 
