bulding past city and AJAX call

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
         </aside>
 
-        <!--HTML for main weather section, 9 colums in bootstrap 3 used in search-->
+        <!--HTML for main weather section, 9 colums in bootstrap 3 used in search, Container 2-->
         <main class="col-md-9">
 
             <row class="border" id="cur-weather">
@@ -57,8 +57,13 @@
                 <p id="feels"></p>
                 <p id="uv"></p>
             </row>
-            
+
+
+          <div id="weather-boxes" class="row">
+
+          </div>
         </main>
+
     </div>
 </div>
 
