api call working, weather displaying, formatting off

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!--Putting in Title Header-->
-    <nav class = "navbar bg-dark navbar-dark">
+    <nav class = "navbar bg-light navbar-light">
         <span class="navbar-brand mx-auto h1">Weather Dashboard</span>
         
     </nav>     
